--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>PicTos Coin</title>
-</head>
-<body>
-  <h1>Welcome to PicTos Coin!</h1>
-  <p>This is the official page of the PICT token on Solana network.</p>
-</body>
-</html>
+PicTos Coin | Official Site body { margin: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #000; color: #e0e0e0; text-align: center; } header { background: linear-gradient(90deg, #1a1a1a, #004d00); padding: 30px 10px; border-bottom: 3px solid gold; } header img { width: 100px; margin-bottom: 15px; } h1 { color: gold; font-size: 2.5rem; margin-bottom: 10px; } .highlight { color: #00cc00; font-weight: bold; } .section { margin: 40px auto; max-width: 800px; background: #111; border: 1px solid #00cc00; padding: 30px; border-radius: 10px; box-shadow: 0 0 20px #00cc00aa; } .address, .mint, .supply { margin: 10px 0; font-family: monospace; color: gold; } a { color: #00ff99; text-decoration: none; } a:hover { text-decoration: underline; } footer { margin-top: 50px; padding: 20px; color: #999; font-size: 0.9rem; } ￼ 
+Welcome to PicTos Coin!
+The future of community-driven tokens on Solana
+Token Info
+Token Mint: 8GNTtSN7BGwXmncMEjWYsmDB7eYtr9Jfvn8nZHLUo5MM
+Total Supply: 1,000,000,000,000,000 PICT
+View on Solscan
+Wallet Info
+Main Wallet: CzmnHEG88d7w8na41fAH2MuHRnFumLpPtDBCECzudBfo
+View Wallet on Solscan
+Join the Community
+Be a part of our mission on Telegram!
+https://t.me/pictoscoin
+© 2025 PicTos Coin | Built with love on Solana
